k8s/my-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  selector:
    matchLabels:
      app: my-app
      binds-to: my-gateway
  template:
    metadata:
      labels:
        app: my-app
        binds-to: my-gateway
    spec:
      containers:
        - name: my-app
          image: albertoimpl/my-app
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vanilla-oss-gateway-service
spec:
  type: ClusterIP
  selector:
    app: vanilla-oss-gateway
  ports:
    - port: 80
      targetPort: 8080
