k8s/my-gateway-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanilla-oss-gateway-deployment
spec:
  selector:
    matchLabels:
      app: vanilla-oss-gateway
  template:
    metadata:
      labels:
        app: vanilla-oss-gateway
    spec:
      containers:
        - name: vanilla-oss-gateway
          image: albertoimpl/vanilla-oss-gateway
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vanilla-oss-gateway-service
spec:
  type: ClusterIP
  selector:
    app: vanilla-oss-gateway
  ports:
    - port: 80
      targetPort: 8080
